--- a/main.html
+++ b/main.html
@@ -3,37 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <title>Semantic Navbar & Audios</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f4f4f4;
+    }
+    nav {
+      background-color: #333;
+      padding: 10px;
+    }
+    nav ul {
+      list-style-type: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+    nav li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    h2 {
+      margin-top: 30px;
+    }
+    audio {
+      display: block;
+      margin: 15px 0;
+    }
+  </style>
 </head>
 <body>
 
   <!-- Part 1: Semantic Navigation Bar -->
   <nav>
     <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="https://example.com/home">Home</a></li>
+      <li><a href="https://example.com/about">About</a></li>
+      <li><a href="https://example.com/contact">Contact</a></li>
     </ul>
   </nav>
 
   <!-- Part 2: Audio Section -->
-  <h2>3 random audios</h2>
+  <section>
+    <h2>3 random audios</h2>
 
-  <audio controls>
-    <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-  <br>
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+    </audio>
 
-  <audio controls>
-    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-    Your browser does not support the audio element.
-  </audio>
-  <br>
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+      Your browser does not support the audio element.
+    </audio>
 
-  <audio controls>
-    <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
+    <audio controls>
+      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </section>
 
 </body>
 </html>
