--- a/main.html
+++ b/main.html
@@ -2,37 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Semantic Navbar & Audios</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #f4f4f4;
-    }
-    nav {
-      background-color: #333;
-      padding: 10px;
-    }
-    nav ul {
-      list-style-type: none;
-      display: flex;
-      gap: 20px;
-      margin: 0;
-      padding: 0;
-    }
-    nav li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    h2 {
-      margin-top: 30px;
-    }
-    audio {
-      display: block;
-      margin: 15px 0;
-    }
-  </style>
 </head>
 <body>
 
@@ -50,7 +21,7 @@
     <h2>3 random audios</h2>
 
     <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
 
@@ -60,9 +31,10 @@
     </audio>
 
     <audio controls>
-      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
+
   </section>
 
 </body>
