--- a/main.html
+++ b/main.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Semantic Navbar & Audios</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Semantic Navbar and Audio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <!-- Part 1: Semantic Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="https://example.com/home">Home</a></li>
-      <li><a href="https://example.com/about">About</a></li>
-      <li><a href="https://example.com/contact">Contact</a></li>
-    </ul>
-  </nav>
+    <header>
+        <nav aria-label="Main navigation">
+            <ul class="navbar-list">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- Part 2: Audio Section -->
-  <section>
-    <h2>3 random audios</h2>
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-    <br>
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-      Your browser does not support the audio element.
-    </audio>
-    <br>
-    <audio controls>
-      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-  </section>
+    <main>
+        <section class="audios-section">
+            <h1>Audio Samples</h1>
+            <p>Click the play button to listen to some sounds.</p>
+            <div class="audio-container">
+                <audio id="audio1" controls src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
+            </div>
+            <div class="audio-container">
+                <audio id="audio2" controls src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"></audio>
+            </div>
+            <div class="audio-container">
+                <audio id="audio3" controls src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"></audio>
+            </div>
+        </section>
+    </main>
 
 </body>
 </html>
