--- a/main.html
+++ b/main.html
@@ -3,51 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semantic Navbar and Audio</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <title>Semantic Navbar & Audio Section</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        nav {
+            background-color: #333;
+            padding: 10px 0;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav li {
+            margin: 0 20px;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        section#audio-section {
+            padding: 20px;
+            text-align: center;
+        }
+
+        section#audio-section h2 {
+            margin-bottom: 15px;
+        }
+
+        audio {
+            display: block;
+            margin: 15px auto;
+        }
+    </style>
 </head>
 <body>
 
-    <header>
-        <nav aria-label="Main navigation">
-            <a href="/" class="site-logo">MySite</a>
-            <ul>
-                <li><a href="#home" aria-current="page">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Semantic Navbar -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-    <main>
-        <h1>Audio Player</h1>
-        <section class="audio-section">
-            <div class="audio-player-container">
-                <h2>Random Audio 1</h2>
-                <audio controls>
-                    <source src="https://www.w3schools.com/tags/horse.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            
-            <div class="audio-player-container">
-                <h2>Random Audio 2</h2>
-                <audio controls>
-                    <source src="https://www.w3schools.com/tags/horse.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-
-            <div class="audio-player-container">
-                <h2>Random Audio 3</h2>
-                <audio controls>
-                    <source src="https://www.w3schools.com/tags/horse.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </section>
-    </main>
+    <!-- Audio Section -->
+    <section id="audio-section">
+        <h2>3 Random Audios</h2>
+        <audio controls>
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+        <audio controls>
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <audio controls>
+            <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+    </section>
 
 </body>
 </html>
