--- a/main.html
+++ b/main.html
@@ -3,52 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semantic Navbar & Audio Section</title>
+    <title>Semantic Navbar & Audios</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            margin: 20px;
+            background-color: #f8f9fa;
         }
-
         nav {
-            background-color: #333;
-            padding: 10px 0;
+            background-color: #007bff;
+            padding: 10px;
+            border-radius: 8px;
         }
-
         nav ul {
-            list-style: none;
+            list-style-type: none;
             display: flex;
             justify-content: center;
             margin: 0;
             padding: 0;
         }
-
-        nav li {
-            margin: 0 20px;
+        nav ul li {
+            margin: 0 15px;
         }
-
-        nav a {
-            color: #fff;
+        nav ul li a {
+            color: white;
             text-decoration: none;
             font-weight: bold;
         }
-
-        nav a:hover {
+        nav ul li a:hover {
             text-decoration: underline;
         }
-
-        section#audio-section {
-            padding: 20px;
+        section {
+            margin-top: 30px;
             text-align: center;
         }
-
-        section#audio-section h2 {
-            margin-bottom: 15px;
-        }
-
         audio {
             display: block;
             margin: 15px auto;
@@ -57,26 +45,29 @@
 </head>
 <body>
 
-    <!-- Semantic Navbar -->
+    <!-- Part 1: Semantic Navigation Bar -->
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="https://example.com/home">Home</a></li>
+            <li><a href="https://example.com/about">About</a></li>
+            <li><a href="https://example.com/contact">Contact</a></li>
         </ul>
     </nav>
 
-    <!-- Audio Section -->
-    <section id="audio-section">
+    <!-- Part 2: Audio Section -->
+    <section>
         <h2>3 Random Audios</h2>
+
         <audio controls>
             <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
+
         <audio controls>
             <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
             Your browser does not support the audio element.
         </audio>
+
         <audio controls>
             <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
