--- a/main.html
+++ b/main.html
@@ -1,78 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semantic Navbar & Audios</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f8f9fa;
-        }
-        nav {
-            background-color: #007bff;
-            padding: 10px;
-            border-radius: 8px;
-        }
-        nav ul {
-            list-style-type: none;
-            display: flex;
-            justify-content: center;
-            margin: 0;
-            padding: 0;
-        }
-        nav ul li {
-            margin: 0 15px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
-        section {
-            margin-top: 30px;
-            text-align: center;
-        }
-        audio {
-            display: block;
-            margin: 15px auto;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Semantic Navbar & Audios</title>
 </head>
 <body>
 
-    <!-- Part 1: Semantic Navigation Bar -->
-    <nav>
-        <ul>
-            <li><a href="https://example.com/home">Home</a></li>
-            <li><a href="https://example.com/about">About</a></li>
-            <li><a href="https://example.com/contact">Contact</a></li>
-        </ul>
-    </nav>
+  <!-- Part 1: Semantic Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="https://example.com/home">Home</a></li>
+      <li><a href="https://example.com/about">About</a></li>
+      <li><a href="https://example.com/contact">Contact</a></li>
+    </ul>
+  </nav>
 
-    <!-- Part 2: Audio Section -->
-    <section>
-        <h2>3 Random Audios</h2>
-
-        <audio controls>
-            <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
-
-        <audio controls>
-            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-            Your browser does not support the audio element.
-        </audio>
-
-        <audio controls>
-            <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
-    </section>
+  <!-- Part 2: Audio Section -->
+  <section>
+    <h2>3 random audios</h2>
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+    <br>
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+      Your browser does not support the audio element.
+    </audio>
+    <br>
+    <audio controls>
+      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </section>
 
 </body>
 </html>
