--- a/main.html
+++ b/main.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Semantic Navbar & Audios</title>
 </head>
 <body>
 
-  <!-- Part 1: Semantic Navigation Bar -->
+  <!-- Part 1: Navbar -->
   <nav>
     <ul>
-      <li><a href="https://example.com/home">Home</a></li>
-      <li><a href="https://example.com/about">About</a></li>
-      <li><a href="https://example.com/contact">Contact</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
   <!-- Part 2: Audio Section -->
   <section>
-    <h2>3 random audios</h2>
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+    <h2>Audio Section</h2>
+    <p>3 random audios</p>
+    <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
       Your browser does not support the audio element.
     </audio>
-    <br>
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+    <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
       Your browser does not support the audio element.
     </audio>
-    <br>
-    <audio controls>
-      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+    <audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
       Your browser does not support the audio element.
     </audio>
   </section>
